# Multi-threaded-WebRTC-Voice-Agent--Xyra

./: .gitignore  README.md  basic_agent_example.py  docker-compose.yml  pyproject.toml  run_agent.bat  run_dashboard.bat  run_dashboard.py  xyra_learning_guide.md
frontend/: app.js  index.html  style.css
xyra/: agent.py  config.py  db.py  db_init.py  edge_tts_plugin.py  server.py
xyra/tools/: browser.py  calendar.py  database.py  system.py  web.py
