[project]
name = "xyra"
version = "0.1.0"
description = "XYRA — An intelligent AI voice assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.4.0",
    "livekit-agents>=1.5.17",
    "livekit-plugins-cartesia>=1.5.17",
    "livekit-plugins-deepgram>=1.5.17",
    "livekit-plugins-elevenlabs>=1.5.17",
    "livekit-plugins-groq>=1.5.17",
    "livekit-plugins-silero>=1.5.17",
    "psutil>=7.2.2",
    "python-dotenv>=1.2.2",
    "pytz>=2026.2",
    "requests>=2.34.2",
    "tavily-python>=0.7.25",
    "redis>=8.0.0",
    "asyncpg>=0.31.0",
    "playwright>=1.44.0",
]

[project.scripts]
xyra-server = "xyra.server:main"
xyra-agent = "xyra.agent:main"
